compilers/llvm-c-compiler/compiler/ExprParser.cpp

// Generated from Expr.g4 by ANTLR 4.8


#include "ExprVisitor.h"

#include "ExprParser.h"


using namespace antlrcpp;
using namespace antlr4;

ExprParser::ExprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ExprParser::~ExprParser() {
  delete _interpreter;
}

std::string ExprParser::getGrammarFileName() const {
  return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ExprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- TranslationUnitContext ------------------------------------------------------------------

ExprParser::TranslationUnitContext::TranslationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::TranslationUnitContext::EOF() {
  return getToken(ExprParser::EOF, 0);
}

std::vector<ExprParser::DeclarationContext *> ExprParser::TranslationUnitContext::declaration() {
  return getRuleContexts<ExprParser::DeclarationContext>();
}

ExprParser::DeclarationContext* ExprParser::TranslationUnitContext::declaration(size_t i) {
  return getRuleContext<ExprParser::DeclarationContext>(i);
}


size_t ExprParser::TranslationUnitContext::getRuleIndex() const {
  return ExprParser::RuleTranslationUnit;
}


antlrcpp::Any ExprParser::TranslationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitTranslationUnit(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::TranslationUnitContext* ExprParser::translationUnit() {
  TranslationUnitContext *_localctx = _tracker.createInstance<TranslationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprParser::RuleTranslationUnit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::EXTERN)
      | (1ULL << ExprParser::SIGNED)
      | (1ULL << ExprParser::UNSIGNED)
      | (1ULL << ExprParser::INT)
      | (1ULL << ExprParser::CHAR)
      | (1ULL << ExprParser::BOOL)
      | (1ULL << ExprParser::FLOAT)
      | (1ULL << ExprParser::VOID))) != 0)) {
      setState(88);
      declaration();
      setState(93);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(94);
    match(ExprParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

ExprParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::VariableDeclarationContext* ExprParser::DeclarationContext::variableDeclaration() {
  return getRuleContext<ExprParser::VariableDeclarationContext>(0);
}

ExprParser::FunctionDeclarationContext* ExprParser::DeclarationContext::functionDeclaration() {
  return getRuleContext<ExprParser::FunctionDeclarationContext>(0);
}

ExprParser::FunctionDefinitionContext* ExprParser::DeclarationContext::functionDefinition() {
  return getRuleContext<ExprParser::FunctionDefinitionContext>(0);
}


size_t ExprParser::DeclarationContext::getRuleIndex() const {
  return ExprParser::RuleDeclaration;
}


antlrcpp::Any ExprParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::DeclarationContext* ExprParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, ExprParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(96);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(97);
      functionDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(98);
      functionDefinition();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

ExprParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::TypeContext* ExprParser::VariableDeclarationContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

std::vector<ExprParser::InitDeclaratorContext *> ExprParser::VariableDeclarationContext::initDeclarator() {
  return getRuleContexts<ExprParser::InitDeclaratorContext>();
}

ExprParser::InitDeclaratorContext* ExprParser::VariableDeclarationContext::initDeclarator(size_t i) {
  return getRuleContext<ExprParser::InitDeclaratorContext>(i);
}


size_t ExprParser::VariableDeclarationContext::getRuleIndex() const {
  return ExprParser::RuleVariableDeclaration;
}


antlrcpp::Any ExprParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::VariableDeclarationContext* ExprParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, ExprParser::RuleVariableDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    type();
    setState(102);
    initDeclarator();
    setState(107);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__0) {
      setState(103);
      match(ExprParser::T__0);
      setState(104);
      initDeclarator();
      setState(109);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(110);
    match(ExprParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitDeclaratorContext ------------------------------------------------------------------

ExprParser::InitDeclaratorContext::InitDeclaratorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::InitDeclaratorContext::IDENT() {
  return getToken(ExprParser::IDENT, 0);
}

ExprParser::ArrayDimensionListContext* ExprParser::InitDeclaratorContext::arrayDimensionList() {
  return getRuleContext<ExprParser::ArrayDimensionListContext>(0);
}

ExprParser::InitializerContext* ExprParser::InitDeclaratorContext::initializer() {
  return getRuleContext<ExprParser::InitializerContext>(0);
}


size_t ExprParser::InitDeclaratorContext::getRuleIndex() const {
  return ExprParser::RuleInitDeclarator;
}


antlrcpp::Any ExprParser::InitDeclaratorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitInitDeclarator(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::InitDeclaratorContext* ExprParser::initDeclarator() {
  InitDeclaratorContext *_localctx = _tracker.createInstance<InitDeclaratorContext>(_ctx, getState());
  enterRule(_localctx, 6, ExprParser::RuleInitDeclarator);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    match(ExprParser::IDENT);
    setState(114);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::T__5) {
      setState(113);
      arrayDimensionList();
    }
    setState(117);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::T__2) {
      setState(116);
      initializer();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitializerContext ------------------------------------------------------------------

ExprParser::InitializerContext::InitializerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::ConditionalExpressionContext* ExprParser::InitializerContext::conditionalExpression() {
  return getRuleContext<ExprParser::ConditionalExpressionContext>(0);
}


size_t ExprParser::InitializerContext::getRuleIndex() const {
  return ExprParser::RuleInitializer;
}


antlrcpp::Any ExprParser::InitializerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitInitializer(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::InitializerContext* ExprParser::initializer() {
  InitializerContext *_localctx = _tracker.createInstance<InitializerContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprParser::RuleInitializer);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    match(ExprParser::T__2);
    setState(120);
    conditionalExpression();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

ExprParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::FunctionPrototypeContext* ExprParser::FunctionDeclarationContext::functionPrototype() {
  return getRuleContext<ExprParser::FunctionPrototypeContext>(0);
}


size_t ExprParser::FunctionDeclarationContext::getRuleIndex() const {
  return ExprParser::RuleFunctionDeclaration;
}


antlrcpp::Any ExprParser::FunctionDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFunctionDeclaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::FunctionDeclarationContext* ExprParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprParser::RuleFunctionDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    functionPrototype();
    setState(123);
    match(ExprParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDefinitionContext ------------------------------------------------------------------

ExprParser::FunctionDefinitionContext::FunctionDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::FunctionPrototypeContext* ExprParser::FunctionDefinitionContext::functionPrototype() {
  return getRuleContext<ExprParser::FunctionPrototypeContext>(0);
}

ExprParser::CompoundStatementContext* ExprParser::FunctionDefinitionContext::compoundStatement() {
  return getRuleContext<ExprParser::CompoundStatementContext>(0);
}


size_t ExprParser::FunctionDefinitionContext::getRuleIndex() const {
  return ExprParser::RuleFunctionDefinition;
}


antlrcpp::Any ExprParser::FunctionDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFunctionDefinition(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::FunctionDefinitionContext* ExprParser::functionDefinition() {
  FunctionDefinitionContext *_localctx = _tracker.createInstance<FunctionDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 12, ExprParser::RuleFunctionDefinition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    functionPrototype();
    setState(126);
    compoundStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionPrototypeContext ------------------------------------------------------------------

ExprParser::FunctionPrototypeContext::FunctionPrototypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::TypeContext* ExprParser::FunctionPrototypeContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

tree::TerminalNode* ExprParser::FunctionPrototypeContext::IDENT() {
  return getToken(ExprParser::IDENT, 0);
}

tree::TerminalNode* ExprParser::FunctionPrototypeContext::EXTERN() {
  return getToken(ExprParser::EXTERN, 0);
}

ExprParser::FormalParameterListContext* ExprParser::FunctionPrototypeContext::formalParameterList() {
  return getRuleContext<ExprParser::FormalParameterListContext>(0);
}


size_t ExprParser::FunctionPrototypeContext::getRuleIndex() const {
  return ExprParser::RuleFunctionPrototype;
}


antlrcpp::Any ExprParser::FunctionPrototypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFunctionPrototype(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::FunctionPrototypeContext* ExprParser::functionPrototype() {
  FunctionPrototypeContext *_localctx = _tracker.createInstance<FunctionPrototypeContext>(_ctx, getState());
  enterRule(_localctx, 14, ExprParser::RuleFunctionPrototype);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::EXTERN) {
      setState(128);
      match(ExprParser::EXTERN);
    }
    setState(131);
    type();
    setState(132);
    match(ExprParser::IDENT);
    setState(133);
    match(ExprParser::T__3);
    setState(135);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ExprParser::SIGNED)
      | (1ULL << ExprParser::UNSIGNED)
      | (1ULL << ExprParser::INT)
      | (1ULL << ExprParser::CHAR)
      | (1ULL << ExprParser::BOOL)
      | (1ULL << ExprParser::FLOAT)
      | (1ULL << ExprParser::VOID))) != 0)) {
      setState(134);
      formalParameterList();
    }
    setState(137);
    match(ExprParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FormalParameterListContext ------------------------------------------------------------------

ExprParser::FormalParameterListContext::FormalParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::FormalParameterContext *> ExprParser::FormalParameterListContext::formalParameter() {
  return getRuleContexts<ExprParser::FormalParameterContext>();
}

ExprParser::FormalParameterContext* ExprParser::FormalParameterListContext::formalParameter(size_t i) {
  return getRuleContext<ExprParser::FormalParameterContext>(i);
}


size_t ExprParser::FormalParameterListContext::getRuleIndex() const {
  return ExprParser::RuleFormalParameterList;
}


antlrcpp::Any ExprParser::FormalParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFormalParameterList(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::FormalParameterListContext* ExprParser::formalParameterList() {
  FormalParameterListContext *_localctx = _tracker.createInstance<FormalParameterListContext>(_ctx, getState());
  enterRule(_localctx, 16, ExprParser::RuleFormalParameterList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(139);
    formalParameter();
    setState(144);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ExprParser::T__0) {
      setState(140);
      match(ExprParser::T__0);
      setState(141);
      formalParameter();
      setState(146);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FormalParameterContext ------------------------------------------------------------------

ExprParser::FormalParameterContext::FormalParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::TypeContext* ExprParser::FormalParameterContext::type() {
  return getRuleContext<ExprParser::TypeContext>(0);
}

tree::TerminalNode* ExprParser::FormalParameterContext::IDENT() {
  return getToken(ExprParser::IDENT, 0);
}

ExprParser::ArrayDimensionListContext* ExprParser::FormalParameterContext::arrayDimensionList() {
  return getRuleContext<ExprParser::ArrayDimensionListContext>(0);
}


size_t ExprParser::FormalParameterContext::getRuleIndex() const {
  return ExprParser::RuleFormalParameter;
}


antlrcpp::Any ExprParser::FormalParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitFormalParameter(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::FormalParameterContext* ExprParser::formalParameter() {
  FormalParameterContext *_localctx = _tracker.createInstance<FormalParameterContext>(_ctx, getState());
  enterRule(_localctx, 18, ExprParser::RuleFormalParameter);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(147);
    type();
    setState(149);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::IDENT) {
      setState(148);
      match(ExprParser::IDENT);
    }
    setState(152);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::T__5) {
      setState(151);
      arrayDimensionList();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayDimensionListContext ------------------------------------------------------------------

ExprParser::ArrayDimensionListContext::ArrayDimensionListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ExprParser::ArrayDimExprContext *> ExprParser::ArrayDimensionListContext::arrayDimExpr() {
  return getRuleContexts<ExprParser::ArrayDimExprContext>();
}

ExprParser::ArrayDimExprContext* ExprParser::ArrayDimensionListContext::arrayDimExpr(size_t i) {
  return getRuleContext<ExprParser::ArrayDimExprContext>(i);
}


size_t ExprParser::ArrayDimensionListContext::getRuleIndex() const {
  return ExprParser::RuleArrayDimensionList;
}


antlrcpp::Any ExprParser::ArrayDimensionListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitArrayDimensionList(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ArrayDimensionListContext* ExprParser::arrayDimensionList() {
  ArrayDimensionListContext *_localctx = _tracker.createInstance<ArrayDimensionListContext>(_ctx, getState());
  enterRule(_localctx, 20, ExprParser::RuleArrayDimensionList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(154);
      match(ExprParser::T__5);
      setState(155);
      arrayDimExpr();
      setState(156);
      match(ExprParser::T__6);
      setState(160); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ExprParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayDimExprContext ------------------------------------------------------------------

ExprParser::ArrayDimExprContext::ArrayDimExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::ConstantExpressionContext* ExprParser::ArrayDimExprContext::constantExpression() {
  return getRuleContext<ExprParser::ConstantExpressionContext>(0);
}


size_t ExprParser::ArrayDimExprContext::getRuleIndex() const {
  return ExprParser::RuleArrayDimExpr;
}


antlrcpp::Any ExprParser::ArrayDimExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitArrayDimExpr(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ArrayDimExprContext* ExprParser::arrayDimExpr() {
  ArrayDimExprContext *_localctx = _tracker.createInstance<ArrayDimExprContext>(_ctx, getState());
  enterRule(_localctx, 22, ExprParser::RuleArrayDimExpr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(164);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExprParser::T__6: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case ExprParser::T__3:
      case ExprParser::T__7:
      case ExprParser::T__11:
      case ExprParser::T__12:
      case ExprParser::T__13:
      case ExprParser::T__14:
      case ExprParser::T__15:
      case ExprParser::STATIC_CAST:
      case ExprParser::TRUE:
      case ExprParser::FALSE:
      case ExprParser::IDENT:
      case ExprParser::FLOAT_LITERAL:
      case ExprParser::INTEGER_LITERAL:
      case ExprParser::CHARACTER_LITERAL:
      case ExprParser::STRING_LITERAL: {
        enterOuterAlt(_localctx, 2);
        setState(163);
        constantExpression();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ExprParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExprParser::StatementContext::getRuleIndex() const {
  return ExprParser::RuleStatement;
}

void ExprParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ReturnStatementStatContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::ReturnStatementStatContext::RETURN() {
  return getToken(ExprParser::RETURN, 0);
}

ExprParser::ExprContext* ExprParser::ReturnStatementStatContext::expr() {
  return getRuleContext<ExprParser::ExprContext>(0);
}

ExprParser::ReturnStatementStatContext::ReturnStatementStatContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::ReturnStatementStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitReturnStatementStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EmptyStatementStatContext ------------------------------------------------------------------

ExprParser::EmptyStatementStatContext::EmptyStatementStatContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::EmptyStatementStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitEmptyStatementStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BreakStatementStatContext ------------------------------------------------------------------

tree::TerminalNode* ExprParser::BreakStatementStatContext::BREAK() {
  return getToken(ExprParser::BREAK, 0);
}

ExprParser::BreakStatementStatContext::BreakStatementStatContext(StatementContext *ctx) { copyFrom(ctx); }


antlrcpp::Any ExprParser::BreakStatementStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitBreakStatementStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PassStatementContext ------------------------------------------------------------------

ExprParser::CompoundStatementContext* ExprParser::PassStatementContext::compoundStatement() {
  return getRuleContext<ExprParser::CompoundStatementContext>(0);
}

ExprParser::ExpressionStatementContext* ExprParser::PassStatementContext::expressionStatement() {
  return getRuleContext<ExprParser::ExpressionStatementContext>(0);
}

ExprParser::IfStatementContext* ExprParser::PassStatementContext::ifStatement() {
  return getRuleContext<ExprParser::IfStatementContext>(0);
}
